# sentinel-dv

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETENESS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  config.example.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
demo/: README.md
demo/cocotb_results/: results.xml
docs/: how-to-use.md  ids.md  index-store.md  index.md  taxonomy.md
docs/about/: changelog.md  license.md  security.md
docs/adapters/: custom.md
docs/architecture/: overview.md  schemas.md  security.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: performance.md  simulator-support.md
docs/overrides/: .gitkeep
docs/stylesheets/: extra.css
docs/tools/: analysis.md  detail.md  discovery.md  overview.md  regression.md
examples/: demo.py
sentinel_dv/: __init__.py  config.py  ids.py  server.py  taxonomy_engine.py
sentinel_dv/adapters/: __init__.py  cocotb.py  coverage.py  uvm_log.py
sentinel_dv/indexing/: __init__.py  indexer.py  store.py
sentinel_dv/normalization/: __init__.py  redaction.py  signatures.py  taxonomy.py
sentinel_dv/schemas/: __init__.py  assertions.py  common.py  coverage.py  failures.py  regressions.py  tests.py  versioning.py
sentinel_dv/tools/: core.py
sentinel_dv/utils/: __init__.py  bounded_text.py  hashing.py  time.py
tests/: conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_config.py  test_normalization.py  test_utils.py
tests/unit/schemas/: __init__.py  test_common.py
