[project]
name = "sentinel-dv"
version = "1.0.0"
description = "Security-first MCP server for verification intelligence (SystemVerilog/UVM/cocotb)"
authors = [{name = "Sentinel DV Team"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["MCP", "verification", "UVM", "SystemVerilog", "cocotb", "DV", "EDA"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.8.0",
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.9.0",
    "types-pyyaml>=6.0.0",
    "types-python-dateutil>=2.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/sentinel-dv"
Documentation = "https://yourusername.github.io/sentinel-dv/"
Repository = "https://github.com/yourusername/sentinel-dv"
Issues = "https://github.com/yourusername/sentinel-dv/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sentinel_dv"]

[tool.setuptools.package-data]
sentinel_dv = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=sentinel_dv --cov-report=term-missing --cov-report=json --timeout=30"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sentinel_dv"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", "__pycache__", ".pytest_cache", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "SIM102", "SIM103", "SIM108", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
